src/rules/snapshots/ruff__rules__tests__RUF001_RUF.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterString:
      - 𝐁
      - B
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 6
  fix:
    content: B
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 6
- kind:
    AmbiguousUnicodeCharacterString:
      - −
      - "-"
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 6
  fix:
    content: "-"
    location:
      row: 2
      column: 5
    end_location:
      row: 2
      column: 6

