src/rules/snapshots/ruff__rules__tests__RUF001_RUF001.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterString:
      - 𝐁
      - B
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 6
  fix:
    patch:
      content: B
      location:
        row: 1
        column: 5
      end_location:
        row: 1
        column: 6

