src/rules/snapshots/ruff__rules__tests__RUF002_RUF.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterDocstring:
      - ）
      - )
  location:
    row: 6
    column: 55
  end_location:
    row: 6
    column: 56
  fix:
    content: )
    location:
      row: 6
      column: 55
    end_location:
      row: 6
      column: 56
- kind:
    AmbiguousUnicodeCharacterDocstring:
      - ρ
      - p
  location:
    row: 12
    column: 44
  end_location:
    row: 12
    column: 45
  fix:
    content: p
    location:
      row: 12
      column: 44
    end_location:
      row: 12
      column: 45

