src/rules/snapshots/ruff__rules__tests__RUF003_RUF003.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterComment:
      - ᜵
      - /
  location:
    row: 6
    column: 61
  end_location:
    row: 6
    column: 62
  fix:
    patch:
      content: /
      location:
        row: 6
        column: 61
      end_location:
        row: 6
        column: 62

