src/rules/snapshots/ruff__rules__tests__RUF004_RUF004_0.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind: ConvertExitToSysExit
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
- kind: ConvertExitToSysExit
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 8
  fix: ~

