src/rules/snapshots/ruff__rules__tests__RUF004_RUF004_4.py.snap
---
source: src/rules/mod.rs
expression: checks
---
- kind: ConvertExitToSysExit
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix:
    content: exit2
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 4
- kind: ConvertExitToSysExit
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 8
  fix:
    content: exit2
    location:
      row: 7
      column: 4
    end_location:
      row: 7
      column: 8

